# discord-bot

./: .env  .env.example  .gitignore  README.md  main.py  pyproject.toml
discord_bot/: discordChannelFetcher.py
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
