[tool.poetry]
name = "discord-bot"
version = "0.1.0"
description = ""
authors = ["husainalltheway <khalidhusain00112@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.1.0"
requests = "^2.32.3"
discord = "^2.3.2"
asyncio = "^3.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
